--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8"> 
+    <meta charset="utf-8">
     <title>HOME</title>
   </head>
   <body>
-
+    <header>
+      <h1>Bienvenue sur notre site !</h1>
+      <h4>Nous sommes une super Startup</h4>
+    </header>
   </body>
 </html>
