--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
       <h1>Bienvenue sur notre site !</h1>
       <h4>Nous sommes une super Startup</h4>
     </header>
+    <div class="container">
+      <div class="carre"></div>
+      <div class="carre"></div>
+      <div class="carre"></div>
+    </div>
   </body>
 </html>
