--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
       <div class="carre"></div>
       <div class="carre"></div>
     </div>
+    <footer>
+      <ul>
+        <li>Nous contacter</li>
+        <li>Nous rejoindre</li>
+      </ul>
+    </footer>
   </body>
 </html>
